fix for link not readable when hovered over

--- a/app/assets/stylesheets/text_mining.css.scss
+++ b/app/assets/stylesheets/text_mining.css.scss
@@ -8,9 +8,6 @@ body {
    background-color: #fff;
    
 }
-a:link {
-   color: #008;
-}
 
 h1{
   font-size: 40px;
